python | learn flask | 190711

--- a/00_startcamp/day4/second_flask/templates/index.html
+++ b/00_startcamp/day4/second_flask/templates/index.html
@@ -7,8 +7,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href="/dday">dday</a></li>
+            <li><a href="/add">add</a></li>
+            <li><a href="/art">art</a></li>
             <li><a href="/boxoffice">boxoffice</a></li>
+            <li><a href="/dday">dday</a></li>
+            <li><a href="/index">index</a></li>
+            <li><a href="/receive">receive</a></li>
+            <li><a href="/result">result</a></li>
+            <li><a href="/send">send</a></li>
             <li><a href="#"></a></li>
         </ul>
     </nav> 
