--- a/00_startcamp/day4/second_flask/templates/index.html
+++ b/00_startcamp/day4/second_flask/templates/index.html
@@ -15,6 +15,7 @@
             <li><a href="/receive">receive</a></li>
             <li><a href="/result">result</a></li>
             <li><a href="/send">send</a></li>
+            <li><a href="/review">substr</a></li>
             <li><a href="#"></a></li>
         </ul>
     </nav> 
