finish home app & init board app

--- a/06_django_advance/01_DJANGO_RECAP/home/templates/home/guess.html
+++ b/06_django_advance/01_DJANGO_RECAP/home/templates/home/guess.html
@@ -12,7 +12,10 @@
         <h1>Hi :) {{ name }}</h1>
     {% endif %} -->
     <h1>질문지</h1>
-    <form action="{% url 'home:answer' %}">
+
+    <!-- method="GET"를 POST로 바꿈 -->
+    <form action="{% url 'home:answer' %}" method="POST">
+        {% csrf_token %}
         <div> 
             <label for="q1">내 생일은?</label>
             <input id="q1" name="q1" type="text">
