--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -3,6 +3,7 @@
 
 {% block body %}
 <h1>This is Article list</h1>
+<a href="{% url 'board:new' %}">New article</a>
 
 <ul>
     {% for article in articles %}  <!-- [<A1>, <A2>, <A3>] -->
