--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/edit.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/edit.html
@@ -4,19 +4,5 @@
 {% block body %}
 <h1>Edit article</h1>
 
-<form action="{% url 'board:update' article.id %}" method="POST">
-    {% csrf_token %}
-    <label for=""></label>
-    <div>
-        <label for="title">제목:</label>
-        <input id="title" name="title" value="{{ article.title }}">
-    </div>
-    <div>
-        <label for="content">내용:</label>
-        <textarea id="content" name="content" cols="30" rows="10">{{ article.content}}</textarea>
-    </div>
-    <div>
-        <input type="submit" value="제출!">
-    </div>
-</form>
+{% include 'board/_form.html' %}
 {% endblock body %}
