--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
@@ -4,19 +4,7 @@
 {% block body %}
 <h1>New article</h1>
 
-<form action="{% url 'board:create' %}" method="POST">
-    {% csrf_token %}
-    <label for=""></label>
-    <div>
-        <label for="title">제목:</label>
-        <input id="title" name="title">
-    </div>
-    <div>
-        <label for="content">내용:</label>
-        <textarea id="content" name="content" cols="30" rows="10"></textarea>
-    </div>
-    <div>
-        <input type="submit" value="제출!">
-    </div>
-</form>
+{% comment %} board:create => board:new {% endcomment %}
+{% comment %} <form action="{% url 'board:new' %}" method="POST"> {% endcomment %}
+{% include 'board/_form.html' %}
 {% endblock body %}
