--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/new.html
@@ -3,8 +3,13 @@
 
 {% block body %}
 <h1>New article</h1>
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit">
+</form>
 
 {% comment %} board:create => board:new {% endcomment %}
 {% comment %} <form action="{% url 'board:new' %}" method="POST"> {% endcomment %}
-{% include 'board/_form.html' %}
+{% comment %} {% include 'board/_form.html' %} {% endcomment %}
 {% endblock body %}
