--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -5,14 +5,17 @@
 <h1>This is Article list</h1>
 <a href="{% url 'board:new' %}">New article</a>
 
-<ul>
-    {% for article in articles %}  <!-- [<A1>, <A2>, <A3>] -->
-        <li>
-            <a href="{{ article.get_absolute_url }}">
-                {{ article.title }}
-            </a>
-            {% comment %} /board/articles/{{article.id}} {% endcomment %}
-        </li>  <!-- <A1> -->
-    {% endfor%}
-</ul>
+{% if articles %}
+    <ul>
+        {% for article in articles %}  <!-- [<A1>, <A2>, <A3>] -->
+            <li>
+                <a href="{{ article.get_absolute_url }}">
+                    {{ article.title }}
+                </a>
+                {% comment %} /board/articles/{{article.id}} {% endcomment %}
+            </li>  <!-- <A1> -->
+        {% endfor%}
+    </ul>
+{% endif %}
+
 {% endblock body %}
