refactor view/url names(MODEL_) and implement Comment CREATE/READ

--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/list.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <h1>This is Article list</h1>
-<a href="{% url 'board:new' %}">New article</a>
+<a href="{% url 'board:new_article' %}">New article</a>
 
 {% if articles %}
     <ul>
