--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
@@ -7,17 +7,26 @@
         {{ article.content }}
     </p>
     <div>
-        <a href="{% url 'board:edit' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
+        <a href="{% url 'board:edit_article' article.id %}">  <!-- 하드코딩 /board/articles/{{article.id}}/edit -->
             <button>수정</button>
         </a>    
     </div>
     <div>
-        <form action="{% url 'board:delete' article.id %}" method="POST">
+        <form action="{% url 'board:delete_article' article.id %}" method="POST">
             {% csrf_token %}
             {% comment %} <input type="submit" value="삭제" onclick="return confirm('ㄹㅇ?')"> {% endcomment %}
-            <input id="delButton" type="submit" value="삭제">
+            <input type="submit" value="삭제">
         </form>
     </div>
+
+    {% comment %} 가로선 {% endcomment %}
+    <hr> 
+
+    <form action="{% url 'board:new_comment' article.id %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="comment_content">
+        <input type="submit">
+    </form>
 
     {% comment %} <script>
         const delButton = document.querySelector('#delButton');
@@ -27,4 +36,12 @@
 
         delButton.addEventListener('mouseover', writeHi);
     </script> {% endcomment %}
+    
+    {% if comments %}
+        <ul>
+            {% for comment in comments %}
+                <li>{{ comment.content }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 {% endblock body %}
