finish DJANGO_RECAP | 20191014

--- a/06_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
+++ b/06_django_advance/01_DJANGO_RECAP/board/templates/board/detail.html
@@ -22,26 +22,5 @@
     {% comment %} 가로선 {% endcomment %}
     <hr> 
 
-    <form action="{% url 'board:new_comment' article.id %}" method="POST">
-        {% csrf_token %}
-        <input type="text" name="comment_content">
-        <input type="submit">
-    </form>
-
-    {% comment %} <script>
-        const delButton = document.querySelector('#delButton');
-        function writeHi () {
-            document.write('Hi');
-        }
-
-        delButton.addEventListener('mouseover', writeHi);
-    </script> {% endcomment %}
-    
-    {% if comments %}
-        <ul>
-            {% for comment in comments %}
-                <li>{{ comment.content }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+    {% include 'board/_comment.html' %}
 {% endblock body %}
