--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -4,10 +4,41 @@
 
 {% block body %}
 <div class="row mt-3">
-    <div class="col-12 col-md-6">
-        {% if posting.image %}
-            <img src="{{ posting.image.url }}" alt="{{ posting.image }}">
-        {% endif %}
+  <div class="col-12 col-md-6">
+    <div class="card">
+      {% if posting.image %}
+        <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+       {% else %}
+        <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      {% endif %}
+
+      <div class="card-body">
+        <i class="fab fa-angrycreative fa-3x"></i>
+        <hr>
+        <p class="card-text">{{ posting.content }}</p>
+      </div>
     </div>
+  </div>
+    
+  <div class="col-12 col-md-6">
+    
+    <div class="card mb-2">
+      <div class="card-body">
+        <form action="#" method="POST">
+          {% csrf_token %}
+          <label for="comment">leave comment</label>
+          <input type="text" name="comment" id="comment" class="form-control">
+        </form>
+      </div>
+    </div>
+    
+    <div class="card">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+            <li class="list-group-item mb-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, natus incidunt? Consequatur, aliquam dolor, hic eveniet nemo nostrum iure laborum architecto omnis in odio esse at inventore nisi laboriosam delectus!</li>
+        </ul>
+    </div>
+  </div>
 </div>
 {% endblock %}
