--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_card.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_card.html
@@ -1,4 +1,4 @@
-<article class="card mb-3" style="width: 18rem; display: inline-block;">
+<article class="card mb-3">
     <a href="{{ posting.get_absolute_url }}">
         {% if posting.image %}
             <img src="{{ posting.image.url }}" alt="{{ posting.image }}" class="card-img-top image-fluid">
@@ -8,6 +8,6 @@
         {% endif %}                    
     </a>
     <div class="card-body">
-        {{ posting.content }}
+        <i class="fa-2x {{ posting.icon }}"></i>
     </div>
 </article>
