--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_header.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_header.html
@@ -1,14 +1,40 @@
-<header>
+<header class="mt-4">
     <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">
         {% csrf_token %}
         <div class="form-row align-items center">
-            <label for="content" class="sr-only">content</label>
-            <input id="content" type='text' name='content'>
+            <div class="col-auto my-1">
+                <!-- icon select tag -->
+                <label for="icon" class="sr-only">icon</label>            
+                <select name="icon" id="icon" class="custom-select mr-sm-2">
+                    <option value="fas fa-question">?</option>
+                    <option value="far fa-smile">:)</option>
+                    <option value="far fa-angry">:(</option>
+                    <option value="far fa-smile-wink">;)</option>
+                    <option value="fab fa-angrycreative">flex</option>
+                </select>
+            </div>
+            <!-- content input tag -->
+            <div class="col-sm-6 my-1">
+                <label for="content" class="sr-only">content</label>
+                <input id="content" type='text' name='content' class="form-control" placeholder="feels like..">
+            </div>
+           
+            <!-- image file input -->
+            <div class="col-sm-4 my-1 input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">Upload</span>
+                </div>
 
-            <input id="image" name="image" type="file" accept="image/*">
-            <label for="image"></label>
+                <div class="custom-file">
+                    <input id="image" class="custom-file-input" name="image" type="file" accept="image/*">
+                    <label for="image" class="custom-file-label">Choose image</label>
+                </div>
+            </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <!-- submit button -->
+            <div class="col-auto my-1">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </div>
     </form>
 </header>
