--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/base.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/base.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <style>
+        body {
+            background-color: #edd1d8!important;
+        }
+
+        @media (min-width: 796px)
+        .card-columns {
+            column-count: 5;
+        }
+    </style>
+
+    {% comment %} <style>
+        body {
+            background-color: black;!important;
+        }
+    </style> {% endcomment %}
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- FonteAwesome icon set -->
