20191016 | image_upload | accounts

--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/base.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/base.html
@@ -29,7 +29,7 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 <body>
-
+    {% include 'sns/_navbar.html' %}
     <div class="container">
         {% block body %}
         {% endblock body %}
