--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_list.html
@@ -1,8 +1,9 @@
 {% extends 'sns/base.html' %}
 
-{% block title %}{% endblock %}
-{% block body %}
+{% block title %}SNS list{% endblock %}
+{% block list %}active{% endblock %}
 
+{% block body %}
 {% include 'sns/_header.html' %}
 
 {% if postings %}
