--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -2,6 +2,8 @@
 
 {% block title %}{% endblock %}
 
+{% block detail %}active{% endblock %}
+
 {% block body %}
 <div class="row mt-3">
   <div class="col-12 col-md-6">
@@ -20,7 +22,7 @@
                 <p class="card-text">{{ posting.content }}</p>
             </div>
             <div class="col-1">
-                <form action="#" method="POST">
+                <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
                     {% csrf_token %}
                     <button>
                         <i class="fas fa-trash"></i>                
