--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_header.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/_header.html
@@ -1,3 +1,4 @@
+{% if user.is_authenticated %}
 <header class="mt-4">
     <form action="{% url 'sns:create_posting' %}" enctype="multipart/form-data" method="POST">
         {% csrf_token %}
@@ -38,3 +39,4 @@
         </div>
     </form>
 </header>
+{% endif %}
