--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -9,33 +9,37 @@
   <div class="col-12 col-md-6">
     <div class="card">
       {% if posting.image %}
-        <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
-       {% else %}
-        <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
+      <img class="card-img-top image-fluid" src="{{ posting.image.url }}" alt="{{ posting.image }}">
+      {% else %}
+      <img class="card-img-top image-fluid" src="https://picsum.photos/400/200" alt="random-image">
       {% endif %}
 
       <div class="card-body">
         <i class="{{ posting.icon }} fa-3x"></i>
         <hr>
         <div class="row">
-            <div class="col-11">
-                <p class="card-text">{{ posting.content }}</p>
-            </div>
-            <div class="col-1">
-                <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
-                    {% csrf_token %}
-                    <button>
-                        <i class="fas fa-trash"></i>                
-                    </button>
-                </form>
-            </div>
+          <div class="col-11">
+            {% comment %} 아래 posting.user라고 써도 됨 {% endcomment %}
+            <p class="card-text">{{ posting.user.username }}</p>
+            <p class="card-text">{{ posting.content }}</p>
+          </div>
+          <div class="col-1">
+            {% if user == posting.user %}
+            <form action="{% url 'sns:delete_posting' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                <i class="fas fa-trash"></i>
+              </button>
+            </form>
+            {% endif %}
+          </div>
         </div>
         <p class="card-text">{{ posting.content }}</p>
       </div>
     </div>
   </div>
-    
-    {% include 'sns/_comment.html' %}
+
+  {% include 'sns/_comment.html' %}
 
 </div>
 {% endblock %}
