--- a/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
+++ b/06_django_advance/03_IMAGE_UPLOAD/sns/templates/sns/posting_detail.html
@@ -15,7 +15,27 @@
       {% endif %}
 
       <div class="card-body">
-        <i class="{{ posting.icon }} fa-3x"></i>
+        <div class="row">
+          <div class="col-1">
+            <i class="{{ posting.icon }} fa-2x"></i>
+          </div>
+          <div class="col-2">
+            <small>{{ posting.like_users.count }} 명이 좋아합니다.</small>
+          </div>
+          <div class="col-2">
+            <form action="{% url 'sns:like' posting.id %}" method="POST">
+              {% csrf_token %}
+              <button>
+                {% if is_like %}
+                Dislike
+                {% else %}
+                Like
+                {% endif %}
+              </button>
+            </form>
+          </div>
+        </div>
+        {% comment %} <i class="{{ posting.icon }} fa-3x"></i> {% endcomment %}
         <hr>
         <div class="row">
           <div class="col-11">
