--- a/06_django_advance/04_INSTAGRAM/templates/base.html
+++ b/06_django_advance/04_INSTAGRAM/templates/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,16 +9,18 @@
     <title>Fake Insta</title>
     <script src="https://kit.fontawesome.com/557ed3dfa5.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     {% include '_navbar.html' %}
     <div class="container">
         {% block body %}
+
         {% endblock %}
     </div>
     <script src="{% static 'js/jquery-3.3.1.slim.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="{% static 'js/like.js' %}"></script>
 
+</body>
 </html>
