20191108 | JavaScript 시험 공부

--- a/06_django_advance/04_INSTAGRAM/postings/templates/postings/_posting.html
+++ b/06_django_advance/04_INSTAGRAM/postings/templates/postings/_posting.html
@@ -21,16 +21,16 @@
         <img src="..." alt="..." class="card-img-top" />
     {% endif %}
     <div class="card-body">
-
-
-        <button style="border: 0; background: none;">
+        {% comment %} <form action="{% url 'postings:like' posting.id %}" method="POST">
+            {% csrf_token %} {% endcomment %}
+            <button style="border: 0; background: none;">
             <i 
-            class ="{% if is_like %}fas{% else %}far{% endif %}
-            fa-heart js-like-button"
-            data-id="{{ posting.id }}"
-            style="color:crimson"
+                class="{% if is_like%}fas{% else %}far{% endif %} fa-heart js-like-button"
+                data-id="{{ posting.id }}"
+                style="color:crimson"
             ></i>
             </button>
+        {% comment %} </form> {% endcomment %}
         
         <p class="card-text">{{posting.content}}</p>
         <a href="{% url 'postings:update_posting' posting.id %}" class="btn btn-warning">수정</a>
