--- a/Study/HTML_CSS_JavaScript/html_example/main.css
+++ b/Study/HTML_CSS_JavaScript/html_example/main.css
@@ -4,21 +4,49 @@ body {
 }
 
 .header {
-    background: yellowgreen;
+    background: white;
+    border-bottom: 1px solid lightgray;
 }
 
 .container {
-
+    /* background: tomato; */
+    width: 980px;
+    margin: auto;
+    /* padding: 20px 0; */
 }
 
 .container-left {
-
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .logo {
+    float: left;
+    margin-right: 5px;
+}
 
+.logo img {
+    display: block;
 }
 
 .menu {
+    float: left;
+}
 
+.menu-item {
+    float: left;
+    /* margin-right: 10px; */
+    padding: 8px 10px;
+    /* 
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
+    */
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
 }
