--- a/Study/HTML_CSS_JavaScript/html_example_2/main.css
+++ b/Study/HTML_CSS_JavaScript/html_example_2/main.css
@@ -5,6 +5,13 @@ body {
 
 div {
     background: red;
-    width: auto;
-    height: auto;
+    width: 120px;
+    height: 80px;
+    display: inline;
 }
+
+div { display: block; }
+h1 { display: block; }
+p { display: block; }
+
+span { display: inline; }
