--- a/Study/바닐라자바스크립트/index.css
+++ b/Study/바닐라자바스크립트/index.css
@@ -3,5 +3,10 @@ body {
 }
 
 h1 {
-    color: white;
+    color: #34495e;
+    transition: color .5s ease-in-out;
+}
+
+.clicked {
+    color: #7f8c8d;
 }
