--- a/Study/바닐라자바스크립트/index.css
+++ b/Study/바닐라자바스크립트/index.css
@@ -2,6 +2,10 @@ body {
     background-color: mintcream;
 }
 
+.btn {
+    cursor : pointer;
+}
+
 h1 {
     color: #34495e;
     transition: color .5s ease-in-out;
