--- a/Study/animalSNS/main_style.css
+++ b/Study/animalSNS/main_style.css
@@ -36,7 +36,7 @@ nav ul li :hover {
 nav ul li a {
     text-decoration: none;
     color: #fff;
-    padding: 30px;
+    padding: 10px;
 }
 
 .search-box {
@@ -87,6 +87,11 @@ nav ul li a {
     width: 0px;
 }
 
+.menus {
+    position: absolute;
+    top: -0.5%;
+    right: 0%;
+}
 
 body {
     margin: 0;
