Sass | size props | color props

--- a/ReactStudy/styling-with-sass/src/components/Button.scss
+++ b/ReactStudy/styling-with-sass/src/components/Button.scss
@@ -1,5 +1,16 @@
 $blue: #228be6;  // 주석!
+$gray: #495057;
+$pink: #f06595;
 
+@mixin button-color($color) {
+    background: $color;
+    &:hover {
+        background: lighten($color, 10%);
+    }
+    &:active {
+        background: darken($color, 10%);
+    } 
+}
 .Button {
     display: inline-flex;  // flexboxfroggy.com
     color: white;
@@ -9,16 +20,41 @@ $blue: #228be6;  // 주석!
     border-radius: 4px;
     cursor: pointer;
 
-    height: 2.25rem;  // Chrome 에서는 기본 16px이므로 2.25*16 = 36px
     padding-left: 1rem;
     padding-right: 1rem;
-    font-size: 1rem;
 
-    background: $blue;
-    &:hover {
-        background: lighten($blue, 10%);
+    &.large {
+        height: 3rem;
+        font-size: 1.25rem;
     }
-    &:active {
-        background: darken($blue, 10%);
+
+    &.medium {
+        height: 2.25rem;  // Chrome 에서는 기본 16px이므로 2.25*16 = 36px
+        font-size: 1rem;
+    }
+    
+    &.small {
+        height: 1.75rem;
+        font-size: 0.875rem;
+    }
+
+    &.blue {
+        @include button-color($blue);    
+    }
+
+    &.gray {
+        @include button-color($gray);    
+    }
+
+    &.pink {
+        @include button-color($pink);    
+    }
+
+    & + & {
+        margin-left: 1rem;
     }
 }
+
+// .Button + .Button {
+//     margin-left: 1rem;
+// }
